[gd_scene load_steps=39 format=2]

[ext_resource path="res://Sprites/12-Live and Coins/Live Bar.png" type="Texture" id=1]
[ext_resource path="res://Sprites/12-Live and Coins/Small Heart Idle (18x14).png" type="Texture" id=2]
[ext_resource path="res://Script/PlayerUI.gd" type="Script" id=3]
[ext_resource path="res://Sprites/12-Live and Coins/Small Heart Hit (18x14).png" type="Texture" id=4]
[ext_resource path="res://Sprites/12-Live and Coins/Numbers (6x8).png" type="Texture" id=5]
[ext_resource path="res://Sprites/12-Live and Coins/Small Diamond (18x14).png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 14 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 14 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 14 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 14 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 18, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 36, 0, 18, 14 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Hit",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 18, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 36, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 54, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 72, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 90, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 108, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 126, 0, 18, 14 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 54, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 6, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 12, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 18, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 24, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 30, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 36, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 42, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 6, 8 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 32 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "Animate",
"speed": 5.0
} ]

[node name="PlayerUI" type="Control"]
margin_right = 66.0
margin_bottom = 34.0
script = ExtResource( 3 )

[node name="UI" type="TextureRect" parent="."]
margin_right = 66.0
margin_bottom = 34.0
texture = ExtResource( 1 )

[node name="Heart1" type="AnimatedSprite" parent="."]
position = Vector2( 22, 17 )
frames = SubResource( 11 )
animation = "Idle"

[node name="Heart2" type="AnimatedSprite" parent="."]
position = Vector2( 33, 17 )
frames = SubResource( 11 )
animation = "Idle"

[node name="Heart3" type="AnimatedSprite" parent="."]
position = Vector2( 44, 17 )
frames = SubResource( 11 )
animation = "Idle"

[node name="Diamond" type="AnimatedSprite" parent="."]
position = Vector2( 22, 32 )
frames = SubResource( 22 )
animation = "Idle"

[node name="TensNumber" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 35, 31 )
frames = SubResource( 33 )
animation = "Animate"

[node name="OneNumber" type="AnimatedSprite" parent="."]
position = Vector2( 35, 31 )
frames = SubResource( 33 )
animation = "Animate"
